--- a/Documento Trabajo de Grado/Contraportada1.tex
+++ b/Documento Trabajo de Grado/Contraportada1.tex
@@ -2,13 +2,13 @@
 
 \begin{center}
 
-		\fontsize{12pt}{12pt}\textbf{<CÓDIGO>}\\
-		\fontsize{14pt}{14pt}\selectfont Título del Trabajo de Grado\\ %Modificar de acuerdo a la facultad
+		\fontsize{12pt}{12pt}\textbf{\CODIGOTG\ }\\
+		\fontsize{14pt}{14pt}\selectfont \TITULOTG\ \\ %Modificar de acuerdo a la facultad
 %............................................................................	
 		\vspace*{3cm}
-		\fontsize{12pt}{12pt}\textbf{Autor:}\\ 
+		\fontsize{12pt}{12pt}\textbf{Autores:}\\ 
 		\vspace{0.2cm}
-		\fontsize{14pt}{14pt}Nombre Completo del Autor\\
+		\fontsize{14pt}{14pt} \AUTORESTG\ \\
 %............................................................................
         \vspace*{4cm}
 		\fontsize{12pt}{12pt}{MEMORIA DEL TRABAJO DE GRADO REALIZADO PARA CUMPLIR UNO DE LOS REQUISITOS PARA OPTAR AL TITULO DE MAGÍSTER EN INGENIERÍA DE SISTEMAS Y COMPUTACIÓN}
