Cambios de Iván

--- a/Documento Trabajo de Grado/Contraportada1.tex
+++ b/Documento Trabajo de Grado/Contraportada1.tex
@@ -5,19 +5,19 @@
 		\fontsize{12pt}{12pt}\textbf{\CODIGOTG\ }\\
 		\fontsize{14pt}{14pt}\selectfont \TITULOTG\ \\ %Modificar de acuerdo a la facultad
 %............................................................................	
-		\vspace*{3cm}
+		\vspace*{2cm}
 		\fontsize{12pt}{12pt}\textbf{Autores:}\\ 
 		\vspace{0.2cm}
 		\fontsize{14pt}{14pt} \AUTORESTG\ \\
 %............................................................................
-        \vspace*{4cm}
+        \vspace*{3cm}
 		\fontsize{12pt}{12pt}{MEMORIA DEL TRABAJO DE GRADO REALIZADO PARA CUMPLIR UNO DE LOS REQUISITOS PARA OPTAR AL TITULO DE MAGÍSTER EN INGENIERÍA DE SISTEMAS Y COMPUTACIÓN}
 
 %............................................................................
         \vspace*{1.7cm}
 		\fontsize{12pt}{12pt}\textbf{Directora}\\
 		\vspace{0.2cm}
-        Nombre completo del director del TG\\
+        \DIRECTORTG\ \\
         \vspace{0.2cm}
         \textbf{Comité de Evaluación del Trabajo de Grado}\\
         \vspace{0.2cm}
