--- a/Documento Trabajo de Grado/main.tex
+++ b/Documento Trabajo de Grado/main.tex
@@ -151,26 +151,26 @@
 %..................................	
 	\chapternumberfont{\huge}
 	\chaptertitlefont{\large}
-	\chapter{INTRODUCCIÓN} \label{intr}
-	\input{chapters/intro}
+	\chapter{INTRODUCCIÓN}
+	\input{chapters/Introducción}
+	
+	\chapter*{Foreword} 
+    \addcontentsline{toc}{chapter}{Foreword}
 %..................................	
-	\chapter{MARCO TEÓRICO} \label{cap2}
-	\input{chapters/cap2}
+	\chapter{DESCRIPCIÓN GENERAL}
+	\input{chapters/Cap1}
 %..................................	
-	\chapter{MARCO TEÓRICO 2} \label{cap3}
-	\input{chapters/cap3}
+	\chapter{DESCRIPCIÓN DEL PROYECTO}
+	\input{chapters/Cap2}
 %..................................	
-	\chapter{MARCO GEOLÓGICO}
-	\input{chapters/cap4}
+	\chapter{MARCO TEÓRICO / ESTADO DEL ARTE}
+	\input{chapters/Cap3}
 %..................................	
-	\chapter{RESULTADOS}
-	\input{chapters/resultados}
+	\chapter{TRABAJOS RELACIONADOS}
+	\input{chapters/Cap4}
 %..................................	
-	\chapter{DISCUSIÓN}
-	\input{chapters/discusion}
-%..................................	
-	\chapter{CONCLUSIÓN}
-	\input{chapters/conclusion}
+	\chapter{DESARROLLO DEL PROYECTO}
+	\input{chapters/Cap5}
 	\clearpage
 %..................................	
 	\addcontentsline{toc}{chapter}{REFERENCIAS}
