--- a/Documento Trabajo de Grado/utils/Constants.tex
+++ b/Documento Trabajo de Grado/utils/Constants.tex
@@ -1,5 +1,6 @@
 \newcommand{\CODIGOTG}{12345}
-\newcommand{\TITULOTG}{Nuestro hermoso Trabajo de Grado}
+\newcommand{\TITULOTG}{ Evaluación e implementación de métodos de extracción automática de palabras clave aplicados a textos cortos en español}
 \newcommand{\AUTORESTG}{Kelly Gisselle Candelo\\
 Andrea Guti{\'e}rrez Ladino\\
 Iv{\'a}n Felipe Molano}
+\newcommand{\DIRECTORTG}{Alexandra Pomares Quimbaya}
