--- a/Documento Trabajo de Grado/utils/Constants.tex
+++ b/Documento Trabajo de Grado/utils/Constants.tex
@@ -3,4 +3,4 @@
 \newcommand{\AUTORESTG}{Kelly Gisselle Candelo\\
 Andrea Guti{\'e}rrez Ladino\\
 Iv{\'a}n Felipe Molano}
-\newcommand{\DIRECTORTG}{Alexandra Pomares Quimbaya}
+\newcommand{\DIRECTORTG}{Alexandra Pomares Quimbaya}77
